2011-02-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/xref.c (refs): Only emit start and stop strings if we
	write any items at all.
	
	* docs/windows/doc2html.c: Include list of subtopics.

2011-02-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/Makefile.am.in: Don't try to install TeX files for lua
	if we never build lua support.

2011-02-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/mingw/Makefile, config/cygwin/Makefile: New files.  Work
	like config/makefile.cyg and config/makefile.mgw, respectively,
	but without spilling files into the source tree.

	* config/makefile.oww: Dropped.  Superseded by
	config/watcom/Makefile.

2011-02-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): handle the case of transparent
	fill with color from linetype: save color to variable last_color
	on all changes and create solid brushes when required

2011-02-25  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_image, WIN_filled_polygon) src/win/wgraph.c
	(drawgraph: W_boxfill, W_pm3d_setcolor, W_pm3d_filled_polygon)
	(W_image): support transparency and alpha channel for boxes,
	images and polygons. Use memory bitmaps to draw and then use
	AlphaBlend() and TransparentBlt() to copy to the screen. Fix
	clipping of images.

	* config/makefile.mgw(LDLIBS): additional GDI library file

	* docs/gnuplot.doc: update `set style fill transparent`

	* term/win.trm: update and reformat windows help text

2011-02-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc:  sync to docs version 1.651

2011-02-24  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua term/lua.trm:  Make full bitmap
	support conditional on HAVE_CAIROPDF.  Necessary in order to
	build lua without the cairo terminals.

2011-02-24  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* share/LaTeX/Makefile.am (${lua_files}): Missing $(top_srcdir)
	broke out-of-source-tree build.
